# proxima

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bootstrap.yml  build.py  build.sh  meson.build
.github/workflows/: create-release-iso.yaml
cmake/: utils.cmake
cmake/cross/: base.cmake  x86_64.cmake
hydrogen/: CMakeLists.txt
hydrogen/include/: errno.h
hydrogen/include/hydrogen/: error.h
hydrogen/kernel/: CMakeLists.txt  kernel.lds
hydrogen/kernel/include/: compiler.h  string.h  uacpi_libc.h
hydrogen/kernel/include/asm/: cpuid.h  cr.h  idle.h  irq.h  msr.h  pio.h  tables.h
hydrogen/kernel/include/cpu/: cpu.h  exc.h  gdt.h  idt.h  irqvec.h  lapic.h  tss.h  xsave.h
hydrogen/kernel/include/drv/: acpi.h  pci.h  pic.h
hydrogen/kernel/include/mem/: heap.h  kvmm.h  memlayout.h  pmap.h  pmm.h  vheap.h
hydrogen/kernel/include/sched/: mutex.h  proc.h  sched.h  sema.h
hydrogen/kernel/include/sys/: elf.h  vdso.h
hydrogen/kernel/include/util/: idmap.h  panic.h  time.h  xarray.h
hydrogen/kernel/src/cpu/: cpu.c  exc.c  gdt.c  idt.S  idt.c  lapic.S  lapic.c  tss.c  xsave.c
hydrogen/kernel/src/drv/: acpi.c  hpet.c  pci.c  pic.c
hydrogen/kernel/src/init/: main.S  main.c
hydrogen/kernel/src/mem/: heap.c  kvmm.c  pmap.c  pmm.c  vheap.c
hydrogen/kernel/src/sched/: mutex.c  proc.c  sched.S  sched.c  sema.c
hydrogen/kernel/src/sys/: elf.c  syscall.S  vdso.c
hydrogen/kernel/src/util/: idmap.c  list.c  panic.c  print.c  spinlock.c  string.S  time.c  xarray.c
hydrogen/vdso/: CMakeLists.txt  main.c  vdso.lds
patches/autoconf/: 0001-Add-Hydrogen-support.patch  0001-Add-Proxima-support.patch
patches/automake/: 0001-Add-Proxima-support.patch
patches/binutils/: 0001-Fix-autoreconf-failure.patch  0002-Add-Hydrogen-support.patch  0002-Add-Proxima-support.patch
patches/cmake/: 0001-Add-Hydrogen-support.patch  0001-Add-Proxima-support.patch
patches/gcc/: 0001-Add-Hydrogen-support.patch  0001-Add-Proxima-support.patch  0002-Link-with-hydrogen-in-static-builds.patch  0003-Use-PIE_SPEC-instead-of-pie-no-pie.patch
patches/libtool/: 0001-Add-Hydrogen-support.patch  0001-Add-Proxima-support.patch
patches/llvm/: 0001-Add-Hydrogen-support.patch  0001-Add-Proxima-support.patch
patches/ncurses/: 0001-Add-Hydrogen-support.patch
scripts/: geninitrd.sh  mkimg.sh  mkiso.sh
scripts/cross/: x86_64.txt
sources/proxima-devicesd/: main.c  main.h  meson.build
sources/proxima-devicesd/acpi/: acpi.c  acpi.h  kernel-api.c  kernel-api.h  serial.c  serial.h
sources/proxima-devicesd/arch/x86_64/: meson.build
sources/proxima-devicesd/arch/x86_64/include/arch/: memprops.h  mmio.h  pio.h
sources/proxima-devicesd/pci/: pci.c  pci.h
sources/proxima-devicesd/subprojects/: uacpi
sources/proxima-init/: main.c  meson.build
subprojects/hydrogen/: meson.build
subprojects/hydrogen/include/hydrogen/: dirent.h  error.h  fcntl.h  limits.h  sched.h  stat.h  vfs.h
subprojects/hydrogen/kernel/: kernel.lds  meson.build
subprojects/hydrogen/kernel/include/: limine.h  string.h  uacpi_libc.h
subprojects/hydrogen/kernel/include/asm/: fsgsbase.h  mmio.h  msr.h  smap.h
subprojects/hydrogen/kernel/include/cpu/: cpu.h  exc.h  gdt.h  idt.h  lapic.h  tss.h
subprojects/hydrogen/kernel/include/drv/: hpet.h
subprojects/hydrogen/kernel/include/fs/: ramfs.h  vfs.h
subprojects/hydrogen/kernel/include/init/: initrd.h
subprojects/hydrogen/kernel/include/mem/: kvmm.h  memlayout.h  pmap.h  pmm.h  vmm.h
subprojects/hydrogen/kernel/include/sched/: exec.h  proc.h  sched.h  sema.h
subprojects/hydrogen/kernel/include/sys/: elf.h  syscall.h  sysvecs.h  vdso.h
subprojects/hydrogen/kernel/include/util/: idmap.h  list.h  panic.h  print.h  spinlock.h  time.h  xarray.h
subprojects/hydrogen/kernel/src/cpu/: cpu.c  exc.c  gdt.S  gdt.c  idt.c  lapic.c  tss.c  xsave.c
subprojects/hydrogen/kernel/src/drv/: acpi.c
subprojects/hydrogen/kernel/src/fs/: ramfs.c  vfs.c
subprojects/hydrogen/kernel/src/init/: initrd.c  main.c
subprojects/hydrogen/kernel/src/mem/: heap.c  pmap.c  pmm.c  vheap.c  vmm.c
subprojects/hydrogen/kernel/src/sched/: exec.c  mutex.c  proc.c  sched.S  sched.c
subprojects/hydrogen/kernel/src/sys/: fd.c  io.c  proc.c  sched.c  syscall.S  syscall.c  vdso.c  vfs.c  vmm.c
subprojects/hydrogen/kernel/src/util/: idmap.c  list.c  panic.c  print.c  string.c  time.c  xarray.c
subprojects/hydrogen/lib/: meson.build  string.c
subprojects/hydrogen/vdso/: main.c  meson.build  sched.c  syscall.h  vdso.lds  vfs.c
subprojects/init/: main.c  meson.build
subprojects/ld/: entry.S  link.c  link.h  main.c  meson.build  string.c  string.h
subprojects/proxutils/: meson.build
subprojects/proxutils/include/proxima/: compiler.h  elf.h
support/: clangd.sh  context.sh  dev-setup.sh  diff.sh  dirinst.sh  gdb.sh  geninitrd.sh  mkiso.sh  qemu-debug.sh  rebuild.sh  switch.sh
support/autoconf/: regenerate.sh
support/cross/: cmake-x86_64.sh  meson-x86_64.sh
support/llvm/: configure-host.sh
support/qemu/x86_64/: kvm.sh  tcg.sh
